Update search history table view cell's text

--- a/MyNetflix/MyNetflix/Base.lproj/Main.storyboard
+++ b/MyNetflix/MyNetflix/Base.lproj/Main.storyboard
@@ -354,7 +354,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="I" rowHeight="86" id="nfb-5F-CNW" customClass="HistoryCell" customModule="MyNetflix" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="86" id="nfb-5F-CNW" customClass="HistoryCell" customModule="MyNetflix" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="86"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nfb-5F-CNW" id="FtI-Fq-QHo">
@@ -374,10 +374,15 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="accessoryView" destination="IsV-e8-Vhb" id="pmr-Zl-cLc"/>
                                             <outlet property="searchTerm" destination="63m-K1-tf2" id="cVV-Ny-SoF"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="0DL-kq-S35" id="6bt-MV-GrR"/>
+                                    <outlet property="delegate" destination="0DL-kq-S35" id="DcE-HV-5fa"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OYX-Ro-fRu"/>
